--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,22 +1,33 @@
+
 .header{
-    margin : 2rem 10%;
     text-align: center;
     display: flex;
     justify-content: space-between;
     align-items: center;
     border-bottom : 2px solid black;
+    position: fixed;
+    top:0;
+    left: 0;
+    z-index: 10;
+    width: 100%;
+    height: 80px;
+    background-color: rgba(255,255,255,0.9);
 
 }
 
 .logo{
+    margin: 0;
+    margin-left: 30%;
     font-size: 2rem;
-    color: rgb(57, 33, 2);
+    color: rgb(2, 57, 20);
+    inline-size: max-content;
 }
 
 .menus{
     display: flex;
     list-style: none;
     gap: 1.5rem;
+    margin-right: 5%;
 }
 
 .menus li{
