--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -1,6 +1,25 @@
-.post{
-    background-color: beige;
+.post{ /*각각 li*/ 
+    border-bottom: 1px solid rgb(214, 214, 214);
+    background-color: rgb(255, 255, 255);
     list-style: none;
-    width: 10rem;
-    height: 27vh;
+    animation: animate-in 0.5s ease-out forwards;
+    padding: 0px 30px 10px 30px;
+    text-indent: 1em;
+    margin-bottom: 30px;
 }
+
+.post p{
+  color: rgb(41, 41, 41);
+}
+
+@keyframes animate-in {
+    from {
+      opacity: 0;
+      transform: translateY(1rem);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  
