--- a/src/components/PostList.module.css
+++ b/src/components/PostList.module.css
@@ -1,4 +1,15 @@
-.postlist{
-display: flex;
-gap : 1.5rem;
+.postlist{ /*ul*/
+max-height: 300px;
+max-width: 800px;
+margin: auto;
+margin-top: 80px;
+text-align: center;
+padding-top: 1rem;
+justify-content: center;
+
+}
+
+a{
+ text-decoration: none;
+ color: black;
 }
