230529 모달 방식 수정, 레이어 변경, 에디터 변경

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -32,7 +32,6 @@
 
 .menus li{
     border: none;
-    background-color: bisque;
     display: flex;
     align-items: center;
 }
@@ -41,4 +40,5 @@
 .menus a{
   text-decoration: none;
   color : black;
+  cursor: pointer;
 }
