--- a/src/components/Modal.module.css
+++ b/src/components/Modal.module.css
@@ -9,10 +9,11 @@
 }
 
 .modal{
+    margin-top: 40%;
     padding: 0;
     border: none;
     border-radius: 6px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
-    overflow :hidden;
+    overflow : scroll;
     z-index: 1;
 }
