--- a/src/components/BookContents.module.css
+++ b/src/components/BookContents.module.css
@@ -1,25 +1,38 @@
 .li{
-    margin: auto;
-    max-width: 800px;
+    border: 1px solid black;
+    margin: 2em;
     list-style: none;
-    display: flex;
-    margin-bottom: 40px;
-}
-
-.li image{
-    display: block;
-}
-
-.li div{
+    margin-top: 90px;
     background-color: rgb(255, 255, 255);
-    width: fit-content;
-    padding: 10px;
+    text-align: center;
+    animation: animate-in 0.5s ease-out forwards;
+    
+}
+
+.div{
+    display: flex;
+    justify-content: space-between;
+}
+
+.div img{
+    margin-left: 1em;
+    max-width: 200px;
+    max-height: 200px;
 }
 
 
-
-
-.li p{
-    background-color: rgb(157, 157, 157);
-    overflow: auto;
+.div p{
+    text-align: center;
+    padding: 1rem;
 }
+
+@keyframes animate-in {
+    from {
+      opacity: 0;
+      transform: translateY(1rem);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
