--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -4,13 +4,20 @@
     list-style: none;
     animation: animate-in 0.5s ease-out forwards;
     padding: 0px 30px 10px 30px;
-    text-indent: 1em;
     margin-bottom: 30px;
 }
 
-.post p{
+
+.category{
+  color: gray;
+  text-align: left;
+}
+
+.body{
+  text-align: left;
   color: rgb(41, 41, 41);
 }
+
 
 @keyframes animate-in {
     from {
