--- a/src/components/BookContents.module.css
+++ b/src/components/BookContents.module.css
@@ -1,38 +1,50 @@
-.li{
-    border: 1px solid black;
-    margin: 2em;
-    list-style: none;
-    margin-top: 90px;
-    background-color: rgb(255, 255, 255);
-    text-align: center;
-    animation: animate-in 0.5s ease-out forwards;
-    
+.li {
+  border: 1px solid black;
+  margin: 2em;
+  list-style: none;
+  margin-top: 50px;
+  background-color: rgb(255, 255, 255);
+  text-align: center;
+  animation: animate-in 0.5s ease-out forwards;
 }
 
-.div{
-    display: flex;
-    justify-content: space-between;
+.div {
+  display: flex;
+  justify-content: space-between;
 }
 
-.div img{
-    margin-left: 1em;
-    max-width: 200px;
-    max-height: 200px;
+.div img {
+  margin-top: 30px;
+  margin-left: 1em;
+  max-width: 200px;
+  max-height: 200px;
 }
 
+.div p {
+  text-align: center;
+  padding: 1rem;
+  line-height: 1.5rem;
+}
 
-.div p{
-    text-align: center;
-    padding: 1rem;
+.li a {
+  cursor: pointer;
+}
+
+.more {
+  color: gray;
+}
+
+.more:hover {
+  font-weight: bold;
 }
 
 @keyframes animate-in {
-    from {
-      opacity: 0;
-      transform: translateY(1rem);
-    }
-    to {
-      opacity: 1;
-      transform: translateY(0);
-    }
+  from {
+    opacity: 0;
+    transform: translateY(1rem);
   }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
