--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -11,7 +11,7 @@
     z-index: 10;
     width: 100%;
     height: 80px;
-    background-color: rgba(255,255,255,0.9);
+    background-color: rgba(255,255,255,20%);
 
 }
 
