--- a/src/components/Modal.module.css
+++ b/src/components/Modal.module.css
@@ -1,23 +1,32 @@
-.backDrop{
-    position: fixed;
-    top:0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.6);
-    z-index: 1;
+.backDrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 1;
 }
 
-.modal{
-    margin-top: 700px;
-    padding: 0;
-    border: none;
-    border-radius: 6px;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
-    overflow : scroll;
-    z-index: 1;
+.modal {
+  top: 50%;
+  left: 50%;
+  margin: 0;
+  position: fixed;
+  padding: 0;
+  border: none;
+  border-radius: 6px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+  overflow: scroll;
+  z-index: 1;
+
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
 .modal::-webkit-scrollbar {
-    display: none;
-    }
+  display: none;
+}
