--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -11,8 +11,7 @@
     z-index: 10;
     width: 100%;
     height: 80px;
-    background-color: rgba(255,255,255,20%);
-
+    background-color: white;
 }
 
 .logo{
