닉네임 기능 추가

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 body{
     margin: 0;
 }
+
+@font-face {
+    font-family: 'logoFont';
+    src: url('./assets/DancingScript-SemiBold.ttf') format('truetype');
+  }
+  
