--- a/src/components/Pagination.module.css
+++ b/src/components/Pagination.module.css
@@ -4,6 +4,8 @@
   justify-content: center;
   align-items: center;
   gap: 3px;
+  margin-bottom : 50px;
+  margin-top : 10px;
 }
 
 .button {
@@ -19,3 +21,4 @@
   background-color: rgba(0, 0, 0,50%);
   color: white;
 }
+
