--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -2,7 +2,7 @@
     border-bottom: 1px solid rgb(214, 214, 214);
     background-color: rgb(255, 255, 255);
     list-style: none;
-    animation: animate-in 0.5s ease-out forwards;
+    animation: animate-in 1s ease-out forwards;
     padding: 0px 30px 10px 30px;
     margin-bottom: 30px;
 }
@@ -33,3 +33,10 @@
     }
   }
   
+  .loading{
+    text-align: center;
+    background-color: rgb(0, 0, 0);
+    width : 100%;
+    height: 500px;
+    color: white;
+  }
