--- a/src/components/PostList.module.css
+++ b/src/components/PostList.module.css
@@ -1,14 +1,54 @@
-.postlist{ /*ul*/
-max-width: 800px;
-margin: auto;
-margin-top: 80px;
-text-align: center;
-padding-top: 1rem;
-justify-content: center;
+.postlist {
+  /*ul*/
+  max-width: 800px;
+  margin: auto;
+  margin-top: 80px;
+  text-align: center;
+  padding-top: 1rem;
+  justify-content: center;
 }
 
+a {
+  text-decoration: none;
+  color: black;
+}
 
-a{
- text-decoration: none;
- color: black;
+.howmany {
+  margin: auto;
+  max-width: 800px;
+  text-align: right;
+}
+
+.howmany select {
+  font-size: 15px;
+}
+
+.howmany span {
+  padding-right: 10px;
+}
+
+.loading{
+  margin-top : 300px;
+  text-align: center;
+}
+
+.loadingAnimation:after{
+  position: absolute;
+  content: '';
+  animation: dot 1.5s infinite ;
+}
+
+@keyframes dot {
+  10% {
+    content: '.';
+  }
+  33% {
+    content: '..';
+  }
+  66% {
+    content: '...';
+  }
+  100%{
+    content:  '....';
+  }
 }
