--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,15 @@
-body{
-    margin: 0;
+html,body{
+  margin:0;
+  padding: 0;
+}
+
+#wrapper{
+  min-height: 100vh;
+  height: auto;
+  min-width: 100%;
 }
 
 @font-face {
-    font-family: 'logoFont';
-    src: url('./assets/DancingScript-SemiBold.ttf') format('truetype');
-  }
-  
+  font-family: "logoFont";
+  src: url("./assets/DancingScript-SemiBold.ttf") format("truetype");
+}
